tests/negative/neg_try_send_success_not_boolean.safe
-- Test: neg_try_send_success_not_boolean
-- Description: try_send success variables must have type Boolean.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p25:961abe5a
-- Expected: REJECT source_frontend_error

package try_send_success_not_boolean_test

   type item is range 0 to 10;

   channel data_ch : item capacity 1;

   task worker
      value   : item = 0;
      success : natural = 0;

      loop
         try_send data_ch, value, success;




